jekyll-site-src/_css_src/components/_toolbar.scss
.mdc-toolbar {
  $component: &;

  display: flex;
  align-items: center;
  justify-content: center;

  background: $header-background;
  color: $header-text-color;
  height: $toolbar-height;
  z-index: 3;

  &__title {
    background: no-repeat left/40px url('/images/mdc-logo.svg');
    font-family: $ui-font-family;
    font-weight: 400;
    height: 32px;
    padding: 2px 0 5px 50px;
    text-transform: uppercase;

    #{$component}--root & {
      background-image: url('/images/material-logo.svg');
      background-size: contain;
    }
  }

  &__title-link {
    @include link-styles {
      color: $header-text-color;
      text-decoration: none;
    }
  }

  &__row {
    @include content-element;
    height: $toolbar-height;
  }

  &--no-shadow {
    box-shadow: none;
  }
}

.toolbar-nav {
  margin-top: -1 * nth($mdc-toolbar-padding, 1);
  height: $toolbar-height;

  &__links {
    display: flex;
    height: 100%;
  }
}

.toolbar-nav-link {
  @include link-styles {
    color: $white;
    fill: $white;
  }

  display: inline-flex;
  align-items: center;

  height: 100%;
  padding: 0 14px;

  border-bottom: 2px solid transparent;
  cursor: pointer;
  text-decoration: none;
  text-transform: uppercase;

  &__text {
    position: relative;
    top: 2px;
  }

  &--active {
    @include link-styles {
      color: $accent-color;
    }

    border-bottom: 2px solid $accent-color;
  }
}

